# pyknic-home-extras

./: .gitignore  README.md  mypy.ini  setup.cfg  setup.py
pyknic_home_extras/: __init__.py  photo_sorter.py  plugin_def.py  version.py
