
[project]
license = "GNU General Public License v3 (GPLv3)"

[metadata]
name = pyknic-home-extras
url = https://github.com/a1ezzz/pyknic-home-extras
description = Small library for some cases (mostly related to a home routine =))
author = Ildar Gafurov
author_email = dev@binblob.com
maintainer = Ildar Gafurov
maintainer_email = dev@binblob.com
license = GNU Lesser General Public License v3
long_description = file: README.md, CHANGELOG
long_description_content_type = text/markdown

version = attr:pyknic_home_extras.version.__version__

keywords = pyknic-home-extras pyknic

classifiers =
	Development Status :: 2 - Pre-Alpha
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Programming Language :: Python :: 3.14
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires =
install_requires =
	pyknic
	python-magic

[options.extras_require]
dev =
	twine
	Babel
	watchdog[watchmedo]

test =
	mypy
	pytest
	pytest-cov
	pytest-flake8
	pytest-html

all = pyknic[dev,test]

[tool:pytest]
python_files = tests/pytest/*.py
addopts = -v --html=docs/pytest/index.html --capture=sys --flake8 --cov pyknic --cov-report html:docs/pytest-coverage --cov-report xml:docs/pytest-coverage.xml --cov-report lcov:docs/pytest-coverage.lcov

[flake8]
extend-ignore = E275
max-line-length = 120

[options.entry_points]

pyknic.plugins =
   main_plugin = pyknic_home_extras.plugin_def:init_plugin
